vault-secret-main/vault-postgreSQL/templates/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault-sa
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: vault
        image: hashicorp/vault:1.15.0
        imagePullPolicy: Always
        args:
          - "server"
          - "-config=/vault/config/vault.hcl"
        ports:
        - containerPort: 8200
        volumeMounts:
        - name: vault-storage
          mountPath: /vault/data
        - name: config
          mountPath: /vault/config
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        livenessProbe:
          httpGet:
            path: /v1/sys/health?standbyok=true&sealedcode=200
            port: 8200
          initialDelaySeconds: 180
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /v1/sys/health?standbyok=true&sealedcode=200
            port: 8200
          initialDelaySeconds: 180
          periodSeconds: 20
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
      volumes:
      - name: vault-storage
        persistentVolumeClaim:
          claimName: vault-pvc-new
      - name: config
        configMap:
          name: vault-config4
