vault-secret-main/vault-postgreSQL/templates/vaultagent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-agent
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-agent
  template:
    metadata:
      labels:
        app: vault-agent
    spec:
      serviceAccountName: vault-sa
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: vault-agent
        image: hashicorp/vault:1.15.0
        imagePullPolicy: Always
        args:
          - "agent"
          - "-config=/vault/config/vault-agent-config.hcl"
        ports:
          - containerPort: 8200
        volumeMounts:
          - name: vault-config
            mountPath: /vault/config
            readOnly: true
          - name: vault-agent-storage
            mountPath: /mnt/data/vault-agent
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
      volumes:
        - name: vault-config
          configMap:
            name: vault-agent-config
        - name: vault-agent-storage
          persistentVolumeClaim:
            claimName: vault-agent-pvc
