vault-secret-main/vault-postgreSQL/templates/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  selector:
    app: vault
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
      nodePort: 31000  # You can choose any available port
  type: NodePort
